finish part 1e and 1f
finish part 1e and 1f

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -58,70 +58,28 @@
    "source": [
     "# file path for data\n",
     "bh_filepath = 'data/bh.dat'\n",
-    "tx_filepath = 'data/tx.dat'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tx_filepath = 'data/tx.dat'\n",
+    "\n",
     "# read data\n",
     "df_block_hash = pd.read_csv(bh_filepath, sep = '\\t')\n",
-    "df_transaction = pd.read_csv(tx_filepath, sep = '\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_transaction = pd.read_csv(tx_filepath, sep = '\\t')\n",
+    "\n",
     "# set column names\n",
     "df_block_hash.columns = ['block ID', 'hash', 'timestamp', 'number of transactions']\n",
-    "df_transaction.columns = ['transaction ID', 'block ID', 'input count', 'output count']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_transaction.columns = ['transaction ID', 'block ID', 'input count', 'output count']\n",
+    "\n",
     "# drop irrelevant columns\n",
     "df_block_hash.drop(['hash', 'number of transactions'], axis = 1, inplace = True)\n",
-    "df_transaction.drop(['input count', 'output count'], axis = 1, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_transaction.drop(['input count', 'output count'], axis = 1, inplace = True)\n",
+    "\n",
     "# check head after drop\n",
     "print(df_block_hash.head())\n",
-    "print(df_transaction.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(df_transaction.head())\n",
+    "\n",
     "# write block hash dataframe to a new dat file\n",
     "bh_drop_filepath = 'data/bh.dat'\n",
-    "df_block_hash.to_csv(path_or_buf = bh_drop_filepath, sep = '\\t', index = False, columns = ['block ID', 'timestamp'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_block_hash.to_csv(path_or_buf = bh_drop_filepath, sep = '\\t', index = False, columns = ['block ID', 'timestamp'])\n",
+    "\n",
     "tx_drop_filepath = 'data/tx.dat'\n",
     "df_transaction.to_csv(path_or_buf = tx_drop_filepath, sep = '\\t', index = False, \n",
     "                      columns = ['transaction ID', 'block ID'])"
@@ -148,15 +106,8 @@
    "outputs": [],
    "source": [
     "# split transaction_input file\n",
-    "!split -l 70000000 data/txin.dat t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!split -l 70000000 data/txin.dat t\n",
+    "\n",
     "# set filepath\n",
     "num_txin_file = 11\n",
     "\n",
@@ -164,15 +115,8 @@
     "                      'txin/tai', 'txin/taj', 'txin/tak']\n",
     "txin_output_filepath = ['txin/txin_1.dat', 'txin/txin_2.dat', 'txin/txin_3.dat', 'txin/txin_4.dat', 'txin/txin_5.dat', \n",
     "                        'txin/txin_6.dat', 'txin/txin_7.dat', 'txin/txin_8.dat', 'txin/txin_9.dat', 'txin/txin_10.dat', \n",
-    "                        'txin/txin_11.dat']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                        'txin/txin_11.dat']\n",
+    "\n",
     "# for loop to drop irrelevant columns in transaction_input\n",
     "for x in range(num_txin_file):\n",
     "    curr_input_filepath = txin_input_filepath[x]\n",
@@ -211,15 +155,8 @@
    "outputs": [],
    "source": [
     "# split transaction_output file\n",
-    "!split -l 70000000 data/txout.dat m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!split -l 70000000 data/txout.dat m\n",
+    "\n",
     "# set filepath\n",
     "num_txout_file = 12\n",
     "\n",
@@ -227,15 +164,8 @@
     "                        'txout/mah', 'txout/mai', 'txout/maj', 'txout/mak', 'txout/mal']\n",
     "txout_output_filepath = ['txout/txout_1.dat', 'txout/txout_2.dat', 'txout/txout_3.dat', 'txout/txout_4.dat', \n",
     "                         'txout/txout_5.dat', 'txout/txout_6.dat', 'txout/txout_7.dat', 'txout/txout_8.dat', \n",
-    "                         'txout/txout_9.dat', 'txout/txout_10.dat', 'txout/txout_11.dat', 'txout/txout_12.dat']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                         'txout/txout_9.dat', 'txout/txout_10.dat', 'txout/txout_11.dat', 'txout/txout_12.dat']\n",
+    "\n",
     "# for loop to drop irrelevant columns in transaction_output\n",
     "for x in range(num_txout_file):\n",
     "    curr_input_filepath = txout_input_filepath[x]\n",
@@ -295,7 +225,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1e) Re-split tx_in and tx_out dat files to groups of 2-year time periods\n"
+    "## 1e) Range of Block IDs for each year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bh_filepath = 'data/bh_readable.dat'\n",
+    "df_block_hash = pd.read_csv(bh_filepath, sep = '\\t')\n",
+    "df_block_hash.columns = ['blockID', 'timestamp', 'month', 'year']\n",
+    "df_block_hash.head()\n",
+    "\n",
+    "range_block_each_year = {}\n",
+    "\n",
+    "target_year = df_block_hash[\"year\"][0]\n",
+    "\n",
+    "target_block_start = 1\n",
+    "target_block_end = 1\n",
+    "\n",
+    "for row in df_block_hash.itertuples():\n",
+    "    curr_year = row.year\n",
+    "    \n",
+    "    if curr_year > target_year:\n",
+    "        curr_block_id = row.blockID\n",
+    "        \n",
+    "        target_block_end = curr_block_id - 1\n",
+    "        \n",
+    "        range_block_each_year[target_year] = (target_block_start, target_block_end)\n",
+    "        \n",
+    "        target_block_start = curr_block_id\n",
+    "        \n",
+    "        target_year += 1\n",
+    "        \n",
+    "    if target_year == 2018:\n",
+    "        break\n",
+    "        \n",
+    "print(range_block_each_year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1f) Range of Transaction IDs for each year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tx_filepath = 'data/tx.dat'\n",
+    "df_tx = pd.read_csv(tx_filepath, sep = '\\t')\n",
+    "df_tx.columns = ['transactionID', 'blockID']\n",
+    "\n",
+    "range_tx_each_year = {}\n",
+    "\n",
+    "for key in range_block_each_year:\n",
+    "    value = range_block_each_year[key]\n",
+    "    \n",
+    "    block_range_start = value[0]\n",
+    "    block_range_end = value[1]\n",
+    "    \n",
+    "    df_curr = df_tx[df_tx['blockID'] == block_range_start]\n",
+    "    df_curr.reset_index()\n",
+    "    tx_range_start = df_curr.iloc[0]['transactionID']\n",
+    "    \n",
+    "    df_curr = df_tx[df_tx['blockID'] == block_range_end]\n",
+    "    df_curr.reset_index()\n",
+    "    tx_range_end = df_curr.iloc[len(df_curr) - 1]['transactionID']\n",
+    "    \n",
+    "    range_tx_each_year[key] = (tx_range_start, tx_range_end)\n",
+    "    \n",
+    "print(range_tx_each_year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1g) Range of Address IDs for each year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1h) Re-split tx_in and tx_out dat files to groups of 2-year time periods\n"
    ]
   },
   {
@@ -670,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
