In the process of adding Emmas code

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,32 +308,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1g) Range of Address IDs for each year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code here"
+    "## 1g) Re-split tx_in and tx_out dat files to groups of 2-year time periods\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1h) Re-split tx_in and tx_out dat files to groups of 2-year time periods\n"
+    "Used VIM to split up into 2-year chunks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1h) Range of Address IDs for each year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "data2 = pd.read_csv('TxinFiles/txin_2010.dat', sep='\\t')\n",
+    "data3 = pd.read_csv('TxinFiles/txin_2011.dat', sep='\\t')\n",
+    "data4 = pd.read_csv('TxinFiles/txin_2012.dat', sep='\\t')\n",
+    "data5 = pd.read_csv('TxinFiles/txin_2013.dat', sep='\\t')\n",
+    "#data6 = pd.read_csv('TxinFiles/txin_2014.dat', sep='\\t')\n",
+    "#data7 = pd.read_csv('TxinFiles/txin_2015.dat', sep='\\t')\n",
+    "#data8 = pd.read_csv('TxinFiles/txin_2016.dat', sep='\\t')\n",
+    "#data9 = pd.read_csv('TxinFiles/txin_2017.dat', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data8' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-05c48644ee84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata8\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'address ID'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata8\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'address ID'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'coerce'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdowncast\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data8' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#data8['address ID'] = pd.to_numeric(data8['address ID'], errors='coerce', downcast='integer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [data2, data3, data4, data5]#, data6, data7, data8, data9]\n",
+    "years = ['2010', '2011', '2012', '2013']#, '2014', '2015', '2016', '2017']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_array = []\n",
+    "for frame in data:\n",
+    "    tx_max = frame['address ID'].max()\n",
+    "    max_array.append(tx_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_array = [data2['address ID'].min()]\n",
+    "for i in range(len(max_array)):\n",
+    "    min_array.append(max_array[i] + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2010': (171, 176514),\n",
+       " '2011': (176515, 2769557),\n",
+       " '2012': (2769558, 8714741),\n",
+       " '2013': (8714742, 24822602)}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range_id_each_year = {}\n",
+    "for i in range(len(years)):\n",
+    "    range_id_each_year[years[i]] = (min_array[i], max_array[i])\n",
+    "range_id_each_year"
    ]
   },
   {
@@ -347,9 +432,7 @@
     "\n",
     "transaction overview: tx.dat\n",
     "\n",
-    "transaction input: txin_2010.dat, txin_2012.dat, txin_2014.dat, txin_2016.dat\n",
-    "\n",
-    "transaction output: txout_2010.dat, txout_2012.dat, txout_2014.dat, txout_2016.dat"
+    "transaction input: txin_2010.dat, txin_2012.dat, txin_2014.dat, txin_2016.dat"
    ]
   },
   {
@@ -409,11 +492,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here"
+    "address = data2['address ID'][data2['address ID'] >= 31617]\n",
+    "address = address[address <= 176514]\n",
+    "address.drop_duplicates()\n",
+    "id_2010 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data3['address ID'][data3['address ID'] >= 176515]\n",
+    "address = address[address <= 2769557]\n",
+    "address.drop_duplicates()\n",
+    "id_2011 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2688364, 2604888, 2354830, 2118417, 2168242, 2218848,  606676,\n",
+       "        436978, 1650823, 1470767, 2641328, 1966173,  988617,  611664,\n",
+       "        563838,  941268,  587853, 1080429,  575618, 1474621, 2083368,\n",
+       "        238119, 2904900,  919756, 2811548,  710861, 2637505, 2460222,\n",
+       "        629703, 1064927,  323912, 1072994, 1525707, 2741607, 2544163,\n",
+       "       2885374,  691351, 2447247,  706861, 2693454, 1261853, 1618593,\n",
+       "       1052601, 1771731,  513967, 1926695,  861076,  780576, 1984759,\n",
+       "        949811,  387932,  657623, 1998872, 2575471, 1989581,  549509,\n",
+       "       2317360, 2252638,  743699,  729812, 2032073,  577120, 2205099,\n",
+       "       2554805, 2247311,  750205,  916036, 1696920, 2206098, 1164741,\n",
+       "       1640148,  431706, 1055307,  518111, 1686486, 1834330, 1694011,\n",
+       "       1397200,  274134, 2840909,  682503,  766155, 1822470, 1319171,\n",
+       "        329409,  637270,  383842, 2230467, 2767987,  640225, 2216759,\n",
+       "       1567641,  954136, 2438525,  325178, 1371240,  519790,  691884,\n",
+       "        852686, 1006133,  795813,  561780, 2692625, 1164841, 1065071,\n",
+       "       2725379, 2787797, 1793501, 2342171, 1418875, 2007775, 1015999,\n",
+       "        392677, 1173568,  823912,  396572,  410489, 1233837, 1764226,\n",
+       "        551211, 1094174, 1460963, 1206305, 1034426, 2620410])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_10_11 = id_2010 + id_2011\n",
+    "df_Addr_Year['Address ID']=id_10_11\n",
+    "df_Addr_Year['Year']='2010'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data4['address ID'][data4['address ID'] >= 2769558]\n",
+    "address = address[address <= 8714741]\n",
+    "address.drop_duplicates()\n",
+    "id_2012 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data5['address ID'][data5['address ID'] >= 8714742]\n",
+    "address = address[address <= 24822602]\n",
+    "address.drop_duplicates()\n",
+    "id_2013 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_12_13 = id_2012 + id_2013"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data6['address ID'][data6['address ID'] >= 24822603]\n",
+    "address = address[address <= 58929852]\n",
+    "address.drop_duplicates()\n",
+    "id_2014 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data7['address ID'][data7['address ID'] >= 58929853]\n",
+    "address = address[address <= 115528140]\n",
+    "address.drop_duplicates()\n",
+    "id_2015 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_14_15 = id_2014 + id_2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data8['address ID'][data8['address ID'] >= 115528141]\n",
+    "address = address[address <= 210026230]\n",
+    "address.drop_duplicates()\n",
+    "id_2016 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = data9['address ID'][data9['address ID'] >= 210026231]\n",
+    "address = address[address <= 369453964]\n",
+    "address.drop_duplicates()\n",
+    "id_2017 = np.array(address.sample(125))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_16_17 = id_2016 + id_2017"
    ]
   },
   {
@@ -436,11 +672,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{486152: 1,\n",
+       " 942928: 1,\n",
+       " 416679: 1,\n",
+       " 985286: 1,\n",
+       " 695041: 1,\n",
+       " 1793692: 1,\n",
+       " 1000015: 1,\n",
+       " 1752253: 1,\n",
+       " 2112794: 0,\n",
+       " 2046752: 1,\n",
+       " 1804584: 1,\n",
+       " 440354: 1,\n",
+       " 781366: 1,\n",
+       " 1117343: 0,\n",
+       " 1750216: 1,\n",
+       " 653716: 1,\n",
+       " 2518275: 1,\n",
+       " 2461230: 1,\n",
+       " 805578: 1,\n",
+       " 1463427: 1,\n",
+       " 884092: 1,\n",
+       " 651639: 1,\n",
+       " 2817705: 1,\n",
+       " 1804806: 1,\n",
+       " 1288027: 1,\n",
+       " 2388499: 1,\n",
+       " 315272: 1,\n",
+       " 1758406: 0,\n",
+       " 1005630: 2,\n",
+       " 2091914: 1,\n",
+       " 1070728: 0,\n",
+       " 523387: 1,\n",
+       " 2323925: 1,\n",
+       " 378690: 1,\n",
+       " 2467026: 1,\n",
+       " 2242953: 1,\n",
+       " 1885331: 0,\n",
+       " 2755845: 1,\n",
+       " 2868645: 1,\n",
+       " 1685893: 1,\n",
+       " 478591: 1,\n",
+       " 1892981: 1,\n",
+       " 1147287: 1,\n",
+       " 1548502: 1,\n",
+       " 1331971: 0,\n",
+       " 913768: 1,\n",
+       " 2692188: 1,\n",
+       " 1498701: 1,\n",
+       " 1019045: 1,\n",
+       " 1071435: 0,\n",
+       " 2033058: 1,\n",
+       " 1738933: 1,\n",
+       " 1104700: 1,\n",
+       " 956110: 1,\n",
+       " 964883: 1,\n",
+       " 2099055: 1,\n",
+       " 2092572: 1,\n",
+       " 2342131: 1,\n",
+       " 1643815: 1,\n",
+       " 1448569: 1,\n",
+       " 2804703: 1,\n",
+       " 895041: 1,\n",
+       " 2301007: 1,\n",
+       " 1028036: 1,\n",
+       " 1779565: 1,\n",
+       " 278400: 1,\n",
+       " 259872: 1,\n",
+       " 762686: 1,\n",
+       " 2337738: 1,\n",
+       " 1571943: 1,\n",
+       " 1462237: 1,\n",
+       " 1471124: 1,\n",
+       " 2511375: 1,\n",
+       " 2432876: 1,\n",
+       " 2195225: 1,\n",
+       " 2076736: 1,\n",
+       " 360707: 1,\n",
+       " 1041241: 1,\n",
+       " 1875577: 1,\n",
+       " 2223559: 1,\n",
+       " 474434: 1,\n",
+       " 1545210: 1,\n",
+       " 1078679: 0,\n",
+       " 2089249: 1,\n",
+       " 2152656: 1,\n",
+       " 953842: 1,\n",
+       " 2434689: 1,\n",
+       " 660354: 0,\n",
+       " 847159: 1,\n",
+       " 948255: 1,\n",
+       " 2580444: 17,\n",
+       " 2572279: 1,\n",
+       " 841841: 1,\n",
+       " 2741328: 1,\n",
+       " 2085397: 1,\n",
+       " 1716124: 1,\n",
+       " 1293596: 1,\n",
+       " 1133060: 1,\n",
+       " 408948: 1,\n",
+       " 2488427: 1,\n",
+       " 686281: 1,\n",
+       " 1969342: 1,\n",
+       " 2705844: 1,\n",
+       " 1273507: 0,\n",
+       " 1085634: 0,\n",
+       " 785207: 1,\n",
+       " 1115370: 1,\n",
+       " 457121: 1,\n",
+       " 2416774: 1,\n",
+       " 1783366: 1,\n",
+       " 937036: 1,\n",
+       " 997943: 1,\n",
+       " 1147295: 1,\n",
+       " 2326429: 1,\n",
+       " 2526578: 1,\n",
+       " 1552212: 0,\n",
+       " 2733332: 1,\n",
+       " 458508: 0,\n",
+       " 506402: 1,\n",
+       " 2218250: 1,\n",
+       " 494927: 1,\n",
+       " 1269959: 1,\n",
+       " 850387: 1,\n",
+       " 744803: 1,\n",
+       " 442708: 1}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "num_tx = {}\n",
+    "data_10_17 = [data2, data3, data4, data5]#, data6, data7, data8, data9]\n",
+    "for user in id_10_11:\n",
+    "    num_tx[user] = 0\n",
+    "    for frame in data_10_17:\n",
+    "        d = frame[frame['address ID'] == user]\n",
+    "        d = d.drop_duplicates()\n",
+    "        num_tx[user] = num_tx[user] + len(d)\n",
+    "num_tx"
    ]
   },
   {
@@ -699,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
