Began some of the stats stuff

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -440,6 +440,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2a) Load the Data\n",
+    "Load data above into dataframes. If not already done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data2 = pd.read_csv('TxinFiles/txin_2010.dat', sep='\\t')\n",
+    "#data3 = pd.read_csv('TxinFiles/txin_2011.dat', sep='\\t')\n",
+    "#data4 = pd.read_csv('TxinFiles/txin_2012.dat', sep='\\t')\n",
+    "#data5 = pd.read_csv('TxinFiles/txin_2013.dat', sep='\\t')\n",
+    "#data6 = pd.read_csv('TxinFiles/txin_2014.dat', sep='\\t')\n",
+    "#data7 = pd.read_csv('TxinFiles/txin_2015.dat', sep='\\t')\n",
+    "#data8 = pd.read_csv('TxinFiles/txin_2016.dat', sep='\\t')\n",
+    "#data9 = pd.read_csv('TxinFiles/txin_2017.dat', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2b) Initialize the Dataframe\n",
     "Initialize the following dataframe:\n",
     "\n",
@@ -1120,13 +1144,13 @@
     }
    ],
    "source": [
-    "num_tx = {}\n",
+    "#Arrange two year data chunks into convenient array\n",
     "data_10_17 = [data2, data3, data4, data5]#, data6, data7, data8, data9]\n",
+    "#Create soft copy of 'df_Addr_Year'\n",
     "Temp=df_Addr_Year\n",
     "for index, row in Temp.iterrows():\n",
     "    for frame in data_10_17:\n",
     "        amountOfTransactions = len(frame[frame['address ID'] == row['Address ID']].drop_duplicates())\n",
-    "        #print(amountOfTransactions)\n",
     "        df_Addr_Year.loc[index, 'NumTX'] = int(df_Addr_Year[df_Addr_Year['Address ID']==row['Address ID']]['NumTX']) + amountOfTransactions\n",
     "df_Addr_Year"
    ]
@@ -1159,11 +1183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.824"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "#Create series of the number of transactions from each specified group\n",
+    "group1=df_Addr_Year[df_Addr_Year['Year']=='2010']['NumTX']\n",
+    "#group2=df_Addr_Year[df_Addr_Year['Year']=='2016']['NumTX']\n",
+    "#Get means\n",
+    "group1.mean()\n",
+    "#group2.mean()"
    ]
   },
   {
@@ -1176,11 +1216,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NormaltestResult(statistic=206.80781605168278, pvalue=1.2366686093966197e-45)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "import scipy.stats as stats\n",
+    "\n",
+    "stats.normaltest(group1)\n",
+    "#stats.normaltest(group2)"
    ]
   },
   {
@@ -1193,11 +1249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10% > 1.888313678329451e-06%\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here"
+    "data_10_17 = [data2, data3, data4, data5]#, data6, data7, data8, data9]\n",
+    "totalPopulation = 0\n",
+    "\n",
+    "for frame in data_10_17:\n",
+    "    totalPopulation = totalPopulation + len(frame)\n",
+    "sampleTestPercentage = len(group1) / totalPopulation\n",
+    "#sampleTestPercentage = (len(group1) + len(group2)) / totalPopulation\n",
+    "print('10% > ' + str(sampleTestPercentage) + '%')"
    ]
   },
   {
