--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -18,11 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bitcoin is the world's first online, decentralized, peer to peer currency. Its creator intended for it to be used instead of fiat controlled by the governments and banks. Although the mainstream news outlets have began reporting on it because of the recent price jumps. General usage of Bitcoin users have not been studied extensively.\n",
+    "Bitcoin is the world's first online, decentralized, peer to peer currency. Its creator intended for it to be used instead of fiat controlled by the governments and banks. Bitcoin has gained attention in the public eye recently because of dramatic increase in price from the low of 18 dollars in 2013 to a high of 20,000 dollars in 2018. This begs the question, does usage sustain itself after the hype? Unfortunately, general usage of Bitcoin users have not been studied extensively.\n",
     "\n",
-    "Cryptocurrency is very young, it was only introduced in 2008. It is a concept that continues to remain a mystery for most people, and yet the concept surrounding it is steadily gaining popularity and increasing interest, especially among major financial institutions such as banks, governments, and large tech companies. In fact, nearly all major financial firms and prominent software companies have by now performed substantial research on various types of cryptocurrency. This suggests a question of whether cryptocurrency will soon become the foundation of the world’s economy, or in the very least be a widely used form of currency among people in the near future.\n",
+    "Cryptocurrency is very young, the idea was only created in 2008. It is a technology that continues to remain a mystery for most people, and yet the concept surrounding it is steadily gaining popularity and increasing in interest, especially among major financial institutions such as banks, governments, and large tech companies. In fact, nearly all major financial firms and prominent software companies have by now performed substantial research on various types of cryptocurrency. This suggests a question of whether cryptocurrency will soon become the foundation of the world’s economy, or in the very least be a widely used form of currency among people in the near future.\n",
     "\n",
-    "According to Forbes, a cryptocurrency such as Bitcoin will gradually rise in popularity and will become a widespread form of commonly used currency because of its reliability, in that it can’t be bounced or charged back, and works 24/7, 365 days a year. It is easily accessible during emergencies, such as earthquakes and hurricanes, while a bank could be shut down. This information would suggest that users would be increasing their activity using Bitcoin, and therefore lead to the logical hypothesis that older users are steadily becoming more active users of the Bitcoin platform."
+    "According to Forbes, a cryptocurrency such as Bitcoin will gradually rise in popularity and will become a widespread form of commonly used currency because of its reliability, in that it can’t be bounced or charged back, and works 24/7, 365 days a year. It is easily accessible during emergencies, such as earthquakes and hurricanes, while a bank could be shut down. This information would suggest that users would be increasing their Bitcoin activity, and therefore lead to our hypothesis. We predict that older users who came in before the hype are steadily becoming more active, while newer users who came in during the hype will have a drop-off in usage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: We are defining a Bitcoin address, and a user is the same thing. And will use them interchangeably"
    ]
   },
   {
@@ -949,7 +956,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Create Dataframe for Samples from 2014"
+    "## Part 5: Create Dataframe for Samples from 2014\n",
+    "We performed the same steps for 2014 as we did for 2011."
    ]
   },
   {
@@ -1444,11 +1452,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "With the data we collected we are going to have to reject the hypothesis. We expected older users activity to increase over time, but the reality was quite the opposite. The usage dropped off fast with time. After just a few years there was practically no one using the Bitcoin network from our first sample. Although not statistically significant, users in 2011 did not drop off in usage as fast as users from 2014.   \n",
+    "\n",
+    "The overall trend of users not maintaining activity is reflected in Bloomberg's reporting on Bitcoin's use in commerce. They observed a decreases in the amount of payment processors accepting Bitcoin through time after peaking in late 2017. In their analysis they also mentioned volatility as another likely cause in the lack of sustained transactions. If today your Bitcoin is worth 1,000 dollars, but in one week it could be worth 2,000 dollars. So why spend it when I can wait one week?\n",
+    "\n",
+    "Studies analyzing network activity are a necessary part of the conversation when talking about these currencies. Many of them rely on constant network utilization in order to secure themselves. We would encourage others interested in these currencies to perform similar tests themselves in order to improve the academic rigor surrounding the space."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1483,7 +1495,9 @@
     "\n",
     "3) https://blockgeeks.com/guides/what-is-cryptocurrency/  \n",
     "\n",
-    "4) https://www.forbes.com/sites/investor/2019/02/15/bitcoin-really-is-money-heres-why/#6d569bc479d2"
+    "4) https://www.forbes.com/sites/investor/2019/02/15/bitcoin-really-is-money-heres-why/#6d569bc479d2  \n",
+    "\n",
+    "5) https://www.bloomberg.com/news/articles/2018-08-01/bitcoin-s-use-in-commerce-keeps-falling-even-as-volatility-eases"
    ]
   },
   {
